// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Dropdown.Box renders the Body component first when top prop is provided 1`] = `
<div>
  <div
    class="reactist_dropdown"
    data-testid="reactist-dropdown-box"
    style="display: inline-block;"
  >
    <div
      class="body_wrapper with_arrow top"
      style="position: relative;"
    >
      <div
        class="body"
        data-testid="reactist-dropdown-body"
        id="reactist-dropdown-body"
        style="position: absolute; right: 0px; bottom: 0px;"
      />
    </div>
    <button
      aria-disabled="false"
      class="reactist_button trigger"
      type="button"
    >
      Click me
    </button>
  </div>
</div>
`;

exports[`Dropdown Dropdown.Box renders the Trigger component first when top prop is not provided 1`] = `
<div>
  <div
    class="reactist_dropdown"
    data-testid="reactist-dropdown-box"
    style="display: inline-block;"
  >
    <button
      aria-disabled="false"
      class="reactist_button trigger"
      type="button"
    >
      Click me
    </button>
    <div
      class="body_wrapper with_arrow bottom"
      style="position: relative;"
    >
      <div
        class="body"
        data-testid="reactist-dropdown-body"
        id="reactist-dropdown-body"
        style="position: absolute; right: 0px; top: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown Dropdown.Box renders the Trigger component without crashing 1`] = `
<div>
  <div
    class="reactist_dropdown"
    data-testid="reactist-dropdown-box"
    style="display: inline-block;"
  >
    <button
      aria-disabled="false"
      class="reactist_button trigger"
      type="button"
    />
  </div>
</div>
`;
